# personal

./: .gitconfig  .gitignore  Cargo.toml  README.md
aes/: Cargo.toml  (+1 more)
atlas_generator/: Cargo.toml  README.md  design.md  usage.md
atlas_generator/src/: aspect.rs  lib.rs  modification.rs  optimize.rs  path.rs  rust.rs  transform.rs  trim.rs  version.rs  write.rs
atlas_generator/src/cache/: mod.rs
atlas_generator/src/definition/: mod.rs  parse.rs  serialize.rs  size.rs
atlas_generator/src/index/: font.rs  image.rs  mod.rs
atlas_generator/src/metadata/: font.rs  image.rs  mod.rs
atlas_generator/src/pack/: mod.rs  node.rs  page.rs
atlas_generator/src/populate/: font.rs  image.rs  mod.rs
atlas_generator/src/source/: font.rs  mod.rs  read.rs  scene.rs
atlas_generator/src/test/: mod.rs
atlas_generator/src/vector/: font.rs  mod.rs  scene.rs
bitcoin_client/: Cargo.toml  README.md
bitcoin_client/src/: address_list.rs  address_seed.rs  connection.rs  lib.rs  log.rs  session.rs
bitcoin_client/src/message/: address.rs  fee_filter.rs  get_addresses.rs  get_data.rs  get_headers.rs  headers.rs  inventory.rs  mod.rs  network_address.rs  ping.rs  pong.rs  send_compact.rs  version.rs  version_acknowledgement.rs
bitcoin_client/src/operation/: fetch_blocks.rs  fetch_superblock.rs  list_blocks.rs  mod.rs
ecc/: Cargo.toml  README.md
ecc/src/: field.rs  key.rs  lib.rs  point.rs
ecc/src/curve/: mod.rs  p192.rs  p256.rs  p384.rs  p521.rs  secp256k1.rs  test.rs  x25519.rs
ecc/src/curve25519/: field.rs  mod.rs
gvg_quality_client/: Cargo.toml  README.md
gvg_quality_client/asset/: home.html
gvg_quality_client/src/: connection.rs  document.rs  key.rs  lib.rs  render.rs  send_frame.rs
gvg_quality_server/: Cargo.toml  README.md  build.rs
gvg_quality_server/src/: connection.rs  lib.rs  session.rs
http/: Cargo.toml  README.md
http/src/: body.rs  event.rs  head.rs  lib.rs  state.rs  test.rs  url.rs
http/src/session/: mod.rs
http/src/websocket/: frame.rs  handshake.rs  mod.rs
i_wanted_to/: .gitignore  Cargo.toml  README.md  build.rs
i_wanted_to/assets/: _bullet.html  _chain.html  _crt.html  _crt_videos.html  _electronics_videos.html  _keypsychic.html  _links.html  _oscillocope.html  _rambling.html  _scenes.html  _server.html  _title.html  _wave.html  home.html  list.txt
i_wanted_to/src/: lib.rs
keypsychic_api/: Cargo.toml  README.md
keypsychic_api/src/: lib.rs
keypsychic_client/: .gitignore  Cargo.toml  README.md  notes.md
keypsychic_client/atlas/: atlas.txt  size.txt
keypsychic_client/atlas/design/: bitcoin.afdesign  button.afdesign  check.afdesign  circle.afdesign  copy.afdesign  crystal_ball.afdesign  dots.afdesign  empty.afdesign  home.afdesign  paintbrush.afdesign  question.afdesign  square.afdesign  star.afdesign  star2.afdesign  status.afdesign  stopwatch.afdesign  x.afdesign
keypsychic_client/src/: application.rs  blockchain.rs  export.rs  inspect.rs  lib.rs  resolve.rs
keypsychic_client/src/activity/: bitcoin.rs  crystal_ball.rs  dot.rs  mod.rs  star.rs
keypsychic_client/src/control/: justification.rs  label.rs  mod.rs
keypsychic_client/src/history/: mod.rs
keypsychic_client/src/playfield/: mod.rs
platform/: .gitignore  Cargo.toml  README.md  build.rs
platform/src/: clock.rs  development.rs  framerate.rs  lib.rs  log.rs
platform/src/animate/: mod.rs  progress.rs  state.rs
platform/src/application/: input.rs  mod.rs  setting.rs
platform/src/atlas/: figure.rs  find.rs  font.rs  image.rs  mod.rs  transform.rs  vec16.rs
platform/src/render/: background.rs  context.rs  document.rs  layout.rs  mod.rs  structure.md
platform/src/web/: alert.rs  clipboard.rs  cursor.rs  download.rs  frame.rs  fullscreen.rs  image.rs  iphone.rs  key.rs  location.rs  mobile.rs  mod.rs  performance.rs  resize.rs  sound.rs  storage.rs  timeout.rs  update.rs  websocket.rs  worker.rs
png/: Cargo.toml  README.md
png/src/: filter.rs  lib.rs  test.rs
render_video_client/: Cargo.toml  README.md
render_video_client/asset/: home.html  square.model
render_video_client/src/: bitmap.rs  connection.rs  document.rs  key.rs  lib.rs  render.rs  send_frame.rs
render_video_common/: Cargo.toml  README.md
render_video_common/asset/: cursor.afdesign  horizontal_rule.afdesign  landscape.afdesign  lightning.afdesign  particles.afdesign  square.afdesign
render_video_common/atlas/: atlas.txt  size.txt
render_video_common/src/: field.rs  lib.rs
render_video_common/src/keyframe/: mod.rs  parse.rs
render_video_common/src/message/: atlas_page.rs  frame_displayed.rs  frame_segment.rs  frame_segments.rs  key.rs  mod.rs  output.rs  render_frame.rs  slider.rs
render_video_common/src/storyboard/: diff.rs  mod.rs  parse.rs
render_video_plugin/: Cargo.toml  README.md  build.rs
render_video_plugin/src/: crop.rs  lib.rs
render_video_server/: .gitignore  Cargo.toml  README.md  build.rs
render_video_server/src/: lib.rs  open.rs  plugin.rs  server.rs
rsa/: Cargo.toml  README.md
rsa/src/: bit.rs  key.rs  lib.rs  prime.rs  sign.rs  signed_integer.rs  test.rs
scenes_client/: Cargo.toml  README.md  build.rs  development.md  home.html
scenes_client/atlas/: atlas.txt  bench.afdesign  castle_entrance.afdesign  cloud_castle.afdesign  cutout.afdesign  forest_wizard.afdesign  glow_meadow.afdesign  jungle_path.afdesign  mountain_lake.afdesign  portal.afdesign  simple_portal.afdesign  size.txt  square.afdesign
scenes_client/scene/: castle_entrance.txt  cloud_castle.txt  forest_wizard.txt  glow_meadow.txt  jungle_path.txt  mountain_lake.txt
scenes_client/src/: atlas.rs  development.rs  lib.rs  poll.rs  time.rs
ssh/: Cargo.toml  README.md
ssh/src/: io.rs  lib.rs  test.rs
tls/: Cargo.toml  README.md
tls/src/: config.rs  identifiers.rs  lib.rs  record.rs  record_connection.rs  seal.rs
webhost/: Cargo.toml  README.md
webhost/src/: lib.rs  log.rs
x509/: Cargo.toml  README.md
x509/src/: ecc_certificate_signing_request.rs  ecc_private_key.rs  lib.rs  object_id.rs  rsa_certificate_signing_request.rs  rsa_private_key.rs  rsa_public_key.rs  test.rs
(+602 files in other folders)
