[workspace]
members = ["*"]
exclude = [".cargo", ".git", ".vscode", "target"]
resolver = "3"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[profile.profile]
debug = true
inherits = "release"
strip = "none"

[profile.dev.build-override]
debug = false
opt-level = 3
overflow-checks = false
