[package]
name = "keypsychic_client"
version = "0.1.0"
edition = "2024"
description = "Client for the KeyPsychic service"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
base64 = { path = "../base64" }
bitcoin = { path = "../bitcoin" }
cast = { path = "../cast" }
error = { path = "../error" }
hexadecimal = { path = "../hexadecimal" }
platform = { path = "../platform" }
random = { path = "../random" }

[build-dependencies]
atlas_generator = { path = "../atlas_generator" }
error = { path = "../error" }
