[package]
name = "platform"
version = "0.1.0"
edition = "2024"
description = "Comprehensive platform for building web-based client applications"

[dependencies]
cast = { path = "../cast" }
color = { path = "../color" }
error = { path = "../error" }
glsl = { path = "../glsl" }
png = { path = "../png" }
vector = { path = "../vector" }
wasm = { path = "../wasm" }

[build-dependencies]
error = { path = "../error" }
glsl = { path = "../glsl" }
